--- a/epub/text/fables.xhtml
+++ b/epub/text/fables.xhtml
@@ -34,33 +34,32 @@
 			<p>A Bat fell to the ground and was caught by a Weasel, and was just going to be killed and eaten when it begged to be let go. The Weasel said he couldn’t do that because he was an enemy of all birds on principle. “Oh, but,” said the Bat, “I’m not a bird at all: I’m a mouse.” “So you are,” said the Weasel, “now I come to look at you”; and he let it go. Some time after this the Bat was caught in just the same way by another Weasel, and, as before, begged for its life. “No,” said the Weasel, “I never let a mouse go by any chance.” “But I’m not a mouse,” said the Bat; “I’m a bird.” “Why, so you are,” said the Weasel; and he too let the Bat go.</p>
 
 				<p><em>Look and see which way the wind blows before you commit yourself.</em></p>
+		</article>
+		<article name="dog-and-sow">
+				<h2>The Dog and the Sow</h2>
+			<p>A Dog and a Sow were arguing and each claimed that its own young ones were finer than those of any other animal. “Well,” said the Sow at last, “mine can see, at any rate, when they come into the world: but yours are born blind.”</p>
+		</article>
+		<article name="fox-and-crow">
+				<h2>The Fox and the Crow</h2>
+			<p>A Crow was sitting on a branch of a tree with a piece of cheese in her beak when a Fox observed her and set his wits to work to discover some way of getting the cheese. Coming and standing under the tree he looked up and said, “What a noble bird I see above me! Her beauty is without equal, the hue of her plumage exquisite. If only her voice is as sweet as her looks are fair, she ought without doubt to be Queen of the Birds.” The Crow was hugely flattered by this, and just to show the Fox that she could sing she gave a loud caw. Down came the cheese, of course, and the Fox, snatching it up, said, “You have a voice, madam, I see: what you want is wits.”</p>
+		</article>
+		<article name="horse-and-groom">
+				<h2>The Horse and the Groom</h2>
+			<p>There was once a Groom who used to spend long hours clipping and combing the Horse of which he had charge, but who daily stole a portion of his allowance of oats, and sold it for his own profit. The Horse gradually got into worse and worse condition, and at last cried to the Groom, “If you really want me to look sleek and well, you must comb me less and feed me more.”</p>
+		</article>
+		<article name="wolf-and-lamb">
+				<h2>The Wolf and the Lamb</h2>
+			<p>A Wolf came upon a Lamb straying from the flock, and felt some compunction about taking the life of so helpless a creature without some plausible excuse; so he cast about for a grievance and said at last, “Last year, sirrah, you grossly insulted me.” “That is impossible, sir,” bleated the Lamb, “for I wasn’t born then.” “Well,” retorted the Wolf, “you feed in my pastures.” “That cannot be,” replied the Lamb, “for I have never yet tasted grass.” “You drink from my spring, then,” continued the Wolf. “Indeed, sir,” said the poor Lamb, “I have never yet drunk anything but my mother’s milk.” “Well, anyhow,” said the Wolf, “I’m not going without my dinner”: and he sprang upon the Lamb and devoured it without more ado.</p>
+		</article>
+		<article name="peacock-and-crane">
+				<h2>The Peacock and the Crane</h2>
+			<p>A Peacock taunted a Crane with the dullness of her plumage. “Look at my brilliant colours,” said she, “and see how much finer they are than your poor feathers.” “I am not denying,” replied the Crane, “that yours are far gayer than mine; but when it comes to flying I can soar into the clouds, whereas you are confined to the earth like any dunghill cock.”</p>
+		</article>
+		<article name="cat-and-birds">
+				<h2>The Cat and the Birds</h2>
+			<p>A Cat heard that the Birds in an aviary were ailing. So he got himself up as a doctor, and, taking with him a set of the instruments proper to his profession, presented himself at the door, and inquired after the health of the Birds. “We shall do very well,” they replied, without letting him in, “when we’ve seen the last of you.”</p>
 
-
-
-			The Dog and the Sow
-			A Dog and a Sow were arguing and each claimed that its own young ones were finer than those of any other animal. “Well,” said the Sow at last, “mine can see, at any rate, when they come into the world: but yours are born blind.”
-
-
-			The Fox and the Crow
-			A Crow was sitting on a branch of a tree with a piece of cheese in her beak when a Fox observed her and set his wits to work to discover some way of getting the cheese. Coming and standing under the tree he looked up and said, “What a noble bird I see above me! Her beauty is without equal, the hue of her plumage exquisite. If only her voice is as sweet as her looks are fair, she ought without doubt to be Queen of the Birds.” The Crow was hugely flattered by this, and just to show the Fox that she could sing she gave a loud caw. Down came the cheese, of course, and the Fox, snatching it up, said, “You have a voice, madam, I see: what you want is wits.”
-
-
-			The Horse and the Groom
-			There was once a Groom who used to spend long hours clipping and combing the Horse of which he had charge, but who daily stole a portion of his allowance of oats, and sold it for his own profit. The Horse gradually got into worse and worse condition, and at last cried to the Groom, “If you really want me to look sleek and well, you must comb me less and feed me more.”
-
-
-			The Wolf and the Lamb
-			A Wolf came upon a Lamb straying from the flock, and felt some compunction about taking the life of so helpless a creature without some plausible excuse; so he cast about for a grievance and said at last, “Last year, sirrah, you grossly insulted me.” “That is impossible, sir,” bleated the Lamb, “for I wasn’t born then.” “Well,” retorted the Wolf, “you feed in my pastures.” “That cannot be,” replied the Lamb, “for I have never yet tasted grass.” “You drink from my spring, then,” continued the Wolf. “Indeed, sir,” said the poor Lamb, “I have never yet drunk anything but my mother’s milk.” “Well, anyhow,” said the Wolf, “I’m not going without my dinner”: and he sprang upon the Lamb and devoured it without more ado.
-
-
-			The Peacock and the Crane
-			A Peacock taunted a Crane with the dullness of her plumage. “Look at my brilliant colours,” said she, “and see how much finer they are than your poor feathers.” “I am not denying,” replied the Crane, “that yours are far gayer than mine; but when it comes to flying I can soar into the clouds, whereas you are confined to the earth like any dunghill cock.”
-
-
-			The Cat and the Birds
-			A Cat heard that the Birds in an aviary were ailing. So he got himself up as a doctor, and, taking with him a set of the instruments proper to his profession, presented himself at the door, and inquired after the health of the Birds. “We shall do very well,” they replied, without letting him in, “when we’ve seen the last of you.”
-
-				A villain may disguise himself, but he will not deceive the wise.
+				<p><em>A villain may disguise himself, but he will not deceive the wise.</em></p>
 
 
 
